# 5Camera

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/wang/hello/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/CPP/: com_example_wang_hello_cpp_EHuman.h  ehuman.cpp  mobilenet.cpp  mobilenet.hpp
app/src/main/CPP/include/: mat.h
app/src/main/java/: com_example_wang_hello_cpp_EHuman_OnResultListener.h
app/src/main/java/com/example/wang/hello/: MainActivity.java
app/src/main/java/com/example/wang/hello/cpp/: EHuman.java
app/src/main/java/com/example/wang/hello/fragment/: VideoFragment.java
app/src/main/java/com/example/wang/hello/shcamera/: CameraHelper.java  CameraPreview.java
app/src/main/java/com/example/wang/hello/view/: ColorHintView.java
app/src/main/res/drawable/: s_rect_white.xml
app/src/main/res/layout/: activity_main.xml  fragment_video.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wang/hello/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
